Changelog for App-Magpie

{{$NEXT}}
 - old: using cpan instead of cpanp

2.000     2012-10-19 15:53:22 Europe/Paris
 - migrated to @dzpa:jquelin
 - new command: sort
 - dwim: migrating to parallel::forkmanager for more flexibility
 - dwim: do not try to update a package more than once

**

1.122770  2012-10-03 14:49:29 Europe/Paris
 - new command: recent
 - checkout: abort if neither a module name nor a pkg name
 - old: update modules.skip

1.122721  2012-09-28 15:31:22 Europe/Paris
 - old: ignore package before reporting them elsewhere
 - old: try to guess when cpanplus messes output for unparsable modules
 - old: update modules.skip & packages.skip

1.122720  2012-09-28 14:14:19 Europe/Paris
 - old: update modules.skip & packages.skip

1.122700  2012-09-26 14:08:10 Europe/Paris
 - checkout: possibility to pass in a module name instead of pkg name
 - old: update packages.skip

1.122610  2012-09-17 15:54:41 Europe/Paris
 - update: change tarball suffix if needed
 - old: update packages.skip

1.121570  2012-06-05 10:12:33 Europe/Paris
 - new command: missing
 - update: no need to commit when using mgarepo sync (kharec)

1.120960  2012-04-05 19:52:31 Europe/Paris
 - webstatic: fix distro name
 - webstatic: show nb of perl packages shipped
 - webstatic: store nb of mods/dists on cpan (not yet displayed)

1.120902  2012-03-30 18:17:38 Europe/Paris
 - webstatic: provide rrd in the website

1.120901  2012-03-30 18:00:13 Europe/Paris
 - webstatic: fix webpage title

1.120900  2012-03-30 16:50:20 Europe/Paris
 - new command: webstatic

1.113320  2011-11-28 13:19:16 Europe/Paris
 - fixspec: shipping MYMETA back in %doc (rpm-build now provides modules
   to create the file)

1.113123  2011-11-08 14:58:58 Europe/Paris
 - fixspec: stop shipping MYMETA at all in %doc (it's removed by rpmbuild)

1.113122  2011-11-08 14:50:40 Europe/Paris
 - fixspec: fix 1.113121 which was not doing the right job

1.113121  2011-11-08 14:39:05 Europe/Paris